PLT-5191 - Filter box overlapping fix for IE

--- a/webapp/sass/components/_modal.scss
+++ b/webapp/sass/components/_modal.scss
@@ -542,6 +542,10 @@
     display: flex;
     flex-direction: column;
 
+    .browser--ie & {
+        flex: 20;
+    }
+
     > div {
         min-height: 100%;
         overflow: auto;
